<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#0000ff"
	>
		<TextView  
			android:id="@+id/title"
			android:layout_width="fill_parent" 
			android:layout_height="wrap_content"    
			android:layout_marginTop="10dip"
			android:layout_marginBottom="10dip"
			android:gravity="center"
			android:textColor="#000000"
			android:text="@string/title" 
		/>
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/zone_user"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/title"
			android:background="#00ff00"           
		>
			// Obtenida de http://www.iconseeker.com/png/scrap/user-14.html de 256x256 pixels
			<ImageView
				android:id="@+id/img_user"
				android:layout_width="100dip" 
				android:layout_height="100dip" 
				android:layout_marginTop="10dip"
				android:layout_marginBottom="10dip"
				android:background="@drawable/user"
			/>
			<TextView  
				android:id="@+id/username"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"    
				android:layout_toRightOf="@+id/img_user"
				android:layout_marginTop="10dip"
				android:gravity="center"        
				android:textColor="#000000"
				android:text="@string/username"         
			/>
			<TextView  
				android:id="@+id/description"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" 
				android:layout_toRightOf="@+id/img_user"
				android:layout_below="@+id/username"
				android:layout_marginTop="10dip"
				android:layout_marginRight="10dip"
				android:layout_marginLeft="10dip"
				android:layout_marginBottom="10dip"
				android:textColor="#000000"
				android:text="@string/description"               
			/>        
		</RelativeLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/zone_buttons"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/zone_user"
			android:orientation="vertical"
			android:background="#00fff0"
		>
			<Button
				android:id="@+id/but_profile"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
 				android:layout_marginRight="10dip"
				android:layout_marginLeft="10dip"
				android:layout_marginBottom="5dip"
				android:text="@string/but_profile"
			/>
			<Button
				android:id="@+id/but_info"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:layout_marginRight="10dip"
				android:layout_marginLeft="10dip"
				android:layout_marginBottom="5dip"
				android:text="@string/but_info"
			/>
			<Button
				android:id="@+id/but_update"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dip"
				android:layout_marginRight="10dip"
				android:layout_marginLeft="10dip"
				android:layout_marginBottom="10dip"
				android:text="@string/but_update"
			/>
		</LinearLayout>
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/zone_map"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@+id/zone_user"
			android:layout_toRightOf="@+id/zone_buttons"
			android:orientation="vertical"
			android:background="#505000"
		>
			//Obtenida de googlemaps y recortada a 250x190 pixels    
			<ImageView
				android:id="@+id/img_map"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content" 
				android:background="@drawable/map"
				android:layout_marginTop="10dip"
				android:layout_marginBottom="10dip"
				android:layout_gravity="center"
			/>
			<Button
				android:id="@+id/but_findme"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:layout_marginBottom="10dip"
				android:layout_gravity="center"
				android:text="@string/but_findme"
                         />
		</LinearLayout>
		<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:id="@+id/zone_bottom"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:layout_below="@+id/zone_map"
			android:layout_marginTop="30dip"
			android:background="#505000"
		>	
			// Ejemplo sacado de: http://stackoverflow.com/questions/2182578/marquee-text-in-android                    
			<TextView
        		android:id="@+id/marquee"
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:layout_alignParentRight="true"
        		android:lines="1"
        		android:ellipsize="marquee"
        		android:fadingEdge="horizontal"
        		android:marqueeRepeatLimit="marquee_forever"
        		android:scrollHorizontally="true"
				android:textColor="#ff0000"
				android:text="@string/long_text"                     
			/>
		</RelativeLayout>
	</RelativeLayout>
</ScrollView>

